fix: prevent overflow on html and body elements

--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,10 @@
 }
 
 @layer base {
+  html,
+  body {
+    @apply overflow-hidden;
+  }
   body {
     @apply font-sans;
   }
